# bzl-rick

src/: BUILD.bazel  WORKSPACE  go.mod  go.sum
src/hello/: BUILD.bazel  hello.go
